--- a/lighthouse/encrypt-decrypt/package.json
+++ b/lighthouse/encrypt-decrypt/package.json
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lighthouse-web3/kavach": "^0.1.9",
+    "@lighthouse-web3/sdk": "^0.3.4",
+    "ethers": "^5.7.2",
+    "file-saver": "^2.0.5",
+    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
